# AnimeHubServerByFastapi

./: .env  .env.example  .gitignore  API_DOCS.md  anime_hub.db  main.py  pyproject.toml  replacements.txt  start.fish
app/: __init__.py  main.py
app/api/: router.py
app/api/routes/: admin.py  auth.py  comments.py  posts.py  site.py  users.py
app/core/: config.py  database.py  deps.py  security.py  timezone.py
app/models/: comment.py  post.py  site.py  user.py
app/schemas/: comment.py  common.py  post.py  site.py  user.py
scripts/: .env  add_admin.py  init_db.py  manage_users.py  uploadImage2Oss.py
